feat(radio): inline radio inside inline list

--- a/test/css/input-radio.html
+++ b/test/css/input-radio.html
@@ -72,6 +72,36 @@
 
       </div>
 
+      <h2>Inline</h2>
+      <p>Your language</p>
+      <div class="list list-inline">
+
+        <label class="item item-radio">
+          <input type="radio" name="group1" value="en">
+          <div class="item-content">
+            English
+          </div>
+          <i class="radio-icon icon ion-checkmark"></i>
+        </label>
+
+        <label class="item item-radio">
+          <input type="radio" name="group1" value="fr">
+          <div class="item-content">
+            French
+          </div>
+          <i class="radio-icon icon ion-checkmark"></i>
+        </label>
+
+        <label class="item item-radio">
+          <input type="radio" name="group1" value="sp">
+          <div class="item-content">
+            Spanish
+          </div>
+          <i class="radio-icon icon ion-checkmark"></i>
+        </label>
+
+      </div>
+
     </div>
 
   </body>
