--- a/test/html/input-radio-zarko.html
+++ b/test/html/input-radio-zarko.html
@@ -5,8 +5,8 @@
     
     <title>Radio Buttons</title>
 
-    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+    <link href="../../dist/css/ionic.css" rel="stylesheet">
+    <script src="../../dist//js/ionic.bundle.js"></script>
     </script>
   </head>
 
