Moved test icons to ios

--- a/test/html/content.html
+++ b/test/html/content.html
@@ -118,7 +118,7 @@
       })
 
       .controller('TestCtrl', function($scope, $timeout) {
-        console.log('CONSTRUCT');
+        console.log('CONSTRUCT', ionic.Platform.isIOS());
         $timeout(function() {
         });
       })
