--- a/test/html/tabs.html
+++ b/test/html/tabs.html
@@ -70,7 +70,7 @@
         </ion-content>
       </ion-tab>
 
-      <ion-tab title="Deadlines" icon-on="icon ion-ios7-clock" icon-off="icon ion-ios7-clock-outline" badge-style="badge-light" badge="unreadDeadlines">
+      <ion-tab title="Deadlines" icon-on="icon ion-clock" icon-off="icon ion-clock-outline" badge-style="badge-light" badge="unreadDeadlines">
         <header class="bar bar-header bar-positive">
           <h1 class="title">Deadlines</h1>
         </header>
@@ -79,7 +79,7 @@
         </ion-content>
       </ion-tab>
 
-      <ion-tab title="Settings" icon-on="icon ion-ios7-gear" icon-off="icon ion-ios7-gear-outline">
+      <ion-tab title="Settings" icon-on="icon ion-gear" icon-off="icon ion-gear-outline">
         <header class="bar bar-header bar-positive">
           <h1 class="title">Settings</h1>
         </header>
@@ -88,7 +88,7 @@
         </ion-content>
       </ion-tab>
 
-      <ion-tab title="Settings" icon-on="icon ion-ios7-gear" icon-off="icon ion-ios7-gear-outline">
+      <ion-tab title="Settings" icon-on="icon ion-gear" icon-off="icon ion-gear-outline">
         <header class="bar bar-header bar-positive">
           <h1 class="title">Settings</h1>
         </header>
