Content test tweak

--- a/test/html/content.html
+++ b/test/html/content.html
@@ -95,7 +95,7 @@
             var headerHeight = header.offsetHeight;
 
             $element.bind('scroll', function(e) {
-              if(e.detail.scrollTop > starty) {
+              if(e.detail && e.detail.scrollTop > starty) {
                 // Start shrinking
                 shrinkAmt = headerHeight - Math.max(0, (starty + headerHeight) - e.detail.scrollTop);
                 shrink(header, shrinkAmt, headerHeight);
