chore(demo): fixed a side menu demo

--- a/test/html/sideMenu.html
+++ b/test/html/sideMenu.html
@@ -32,7 +32,7 @@
           </ion-content>
         </ion-side-menu-content>
 
-        <ion-side-menu side="left" width="$root.menuWidth || 275" ng-controller="LeftCtrl" expose-aside-when="(min-width:750px) and (max-width:1200px)">
+        <ion-side-menu side="left" ng-controller="LeftCtrl" expose-aside-when="large">
           <header class="bar bar-header bar-assertive">
             <h1 class="title">Left</h1>
           </header>
