--- a/test/html/tabs.html
+++ b/test/html/tabs.html
@@ -49,12 +49,12 @@
   </head>
   <body ng-controller="RootCtrl">
     <ion-tabs
-          class="tabs-icon-only tabs-positive"
+          class="tabs-icon-only"
           animation="fade-in-out"
           controller-changed="onControllerChanged(oldController, oldIndex, newController, newIndex)">
 
-          <ion-tab title="<img src='http://placekitten.com/40/40'>" ng-controller="HomeCtrl">
-        <header class="bar bar-header bar-positive">
+      <ion-tab title="Tasks" icon="icon ion-social-twitter" ng-controller="HomeCtrl">
+        <header class="bar bar-header">
           <h1 class="title">Tasks</h1>
         </header>
         <ion-content class="has-header has-subheader" on-refresh="onRefresh()" on-scroll="scroll(scrollTop, scrollLeft)">
@@ -70,8 +70,8 @@
         </ion-content>
       </ion-tab>
 
-      <ion-tab title="Deadlines" icon-on="icon ion-clock" icon-off="icon ion-clock-outline" badge-style="badge-light" badge="unreadDeadlines">
-        <header class="bar bar-header bar-positive">
+      <ion-tab title="Deadlines" icon-on="icon ion-ios-clock" icon-off="icon ion-ios-clock-outline" badge-style="badge-light" badge="unreadDeadlines">
+        <header class="bar bar-header">
           <h1 class="title">Deadlines</h1>
         </header>
         <ion-content class="has-header" padding="true">
@@ -79,8 +79,8 @@
         </ion-content>
       </ion-tab>
 
-      <ion-tab title="Settings" icon-on="icon ion-gear" icon-off="icon ion-gear-outline">
-        <header class="bar bar-header bar-positive">
+      <ion-tab title="Settings" icon-on="icon ion-ios-gear" icon-off="icon ion-ios-gear-outline">
+        <header class="bar bar-header">
           <h1 class="title">Settings</h1>
         </header>
         <ion-content class="has-header" padding="true">
@@ -88,6 +88,7 @@
         </ion-content>
       </ion-tab>
 
+      <!--
       <ion-tab title="Settings" icon-on="icon ion-gear" icon-off="icon ion-gear-outline">
         <header class="bar bar-header bar-positive">
           <h1 class="title">Settings</h1>
@@ -105,6 +106,7 @@
           <h1>This tab should be hidden</h1>
         </ion-content>
       </ion-tab>
+    -->
 
     </ion-tabs>
 
