--- a/test/html/content.html
+++ b/test/html/content.html
@@ -46,7 +46,7 @@
             <textarea placeholder="Comments"></textarea>
           </ion-input>
           <ion-input class="item item-input">
-            <span class="input-label">Username</span>
+            <ion-label>Username</ion-label>
             <input type="text">
           </ion-input>
         </div>
