--- a/test/css/input-text.html
+++ b/test/css/input-text.html
@@ -185,21 +185,21 @@
 
       <h3>Stacked Label On Top Of Text Input, No Parent Content Padding</h3>
       <div class="list">
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <ion-label class="input-ion-input">First Name</ion-label>
           <input type="text" placeholder="Drifty">
         </ion-input>
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <ion-label class="input-ion-input">Last Name</ion-label>
           <input type="text" placeholder="Co">
         </ion-input>
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <ion-label class="input-ion-input">Email</ion-label>
           <input type="text" placeholder="your@email.com">
         </ion-input>
       </div>
       <div class="list">
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <ion-label class="input-ion-input">Filter By Name</ion-label>
           <input type="text" placeholder="">
         </ion-input>
@@ -207,7 +207,7 @@
 
       <h3>Stacked Label On Top Of Text Input, list-inset, No Parent Content Padding</h3>
       <div class="list list-inset">
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <ion-label class="input-ion-input">Email</ion-label>
           <input type="text" placeholder="your@email.com">
         </ion-input>
@@ -217,7 +217,7 @@
 
         <h3>Stacked Label On Top Of Text Input, With Parent Content Padding</h3>
         <div class="list">
-          <ion-input class="item item-input item-stacked-ion-input">
+          <ion-input class="item item-input item-stacked-label">
             <ion-label class="input-ion-input">Email</ion-label>
             <input type="text" placeholder="your@email.com">
           </ion-input>
@@ -225,7 +225,7 @@
 
         <h3>Stacked Label On Top Of Text Input, list-inset, With Parent Content Padding</h3>
         <div class="list list-inset">
-          <ion-input class="item item-input item-stacked-ion-input">
+          <ion-input class="item item-input item-stacked-label">
             <ion-label class="input-ion-input">Email</ion-label>
             <input type="text" placeholder="your@email.com">
           </ion-input>
@@ -252,7 +252,7 @@
 
       <h3>Stacked Label On Top Of Text Input, No Parent Content Padding</h3>
       <div class="list">
-        <ion-input class="item item-input item-stacked-ion-input">
+        <ion-input class="item item-input item-stacked-label">
           <i class="icon ion-email"></i>
           <ion-label class="input-ion-input">Email</ion-label>
           <input type="text" placeholder="your@email.com">
@@ -263,7 +263,7 @@
 
         <h3>Stacked Label On Top Of Text Input, With Parent Content Padding</h3>
         <div class="list">
-          <ion-input class="item item-input item-stacked-ion-input">
+          <ion-input class="item item-input item-stacked-label">
             <i class="icon ion-cloud"></i>
             <ion-label class="input-ion-input">SaaS</ion-label>
             <input type="text" placeholder="Codiqa">
@@ -272,7 +272,7 @@
 
         <h3>Stacked Label On Top Of Text Input, list-inset, With Parent Content Padding</h3>
         <div class="list list-inset">
-          <ion-input class="item item-input item-stacked-ion-input">
+          <ion-input class="item item-input item-stacked-label">
             <i class="icon ion-headphone"></i>
             <ion-label class="input-ion-input">Favorite Music</ion-label>
             <input type="text" placeholder="Bee Gees">
