--- a/test/html/slides.html
+++ b/test/html/slides.html
@@ -51,7 +51,7 @@
         <ion-slide-page>
           <h2>During launch</h2>
           <p>
-            Hang on and enjoy the ride. Your input is not needed (and, in fact, is protected against) during the
+            Hang on and enjoy the ride. Your input is not needed (and, in fact, is heavily restricted) during the
             launch and minutes after reacing the proper altitude needed to utilize the ion propulsion engines
             that will carry you to HD 219134 b.
           </p>
