--- a/test/html/slides.html
+++ b/test/html/slides.html
@@ -67,7 +67,7 @@
              of traveling through the vast universe, you must transition to the Cryo Pad for preservation for the rest of the voyage.
           </p>
           <p>
-            During your long nap, the engines will fire the experimental Worm Slip engines to reduce the journey by several hundreds of thousands of years.
+            During your long nap, the experimental Worm Slip engines will fire to reduce the journey by several hundreds of thousands of earth-years.
             The status of the experiment will not be known until your planned Cryo Wake in 4000 earth-years.
           </p>
         </ion-slide-page>
