--- a/test/html/slides.html
+++ b/test/html/slides.html
@@ -75,7 +75,8 @@
           <h2>Approaching HD 219134 b</h2>
           <p>
             If you are lucky enough to be able to see HD 219134 b with your own eyes, congratulations! No
-            space pioneer has ever made it this far. Take a minute and celebrate this monumental accomplishment.
+            space pioneer has ever made it this far. Take a minute and celebrate this monumental achievement by
+            activating the Party Pod.
           </p>
           <p>
             Next, review the Approach checklist for a detailed list of instructions on preparing the capsule for
