Continue the story

--- a/test/html/slides.html
+++ b/test/html/slides.html
@@ -107,7 +107,8 @@
           <p>
             Your Personal Pioneer Pad will help you determine which Life Support Configuration to use. In the event
             that none of the provided Life Support Configurations adaquately protects you from the HD 219134 b environment,
-            we regret to inform you that the experiment is ended and we hope to one day retrieve your valuable data.
+            we regret to inform you that the experiment is ended and we hope to one day retrieve your valuable data. From all of us
+            at Ion Space Pursuits, we thank you for your participation in this important research study.
           </p>
         </ion-slide-page>
       </ion-slides>
