feat(menu): better scroll restrict. Fixes #4869

--- a/test/html/sideMenu.html
+++ b/test/html/sideMenu.html
@@ -28,6 +28,9 @@
                 Sup
                 <ion-option-button class="button-positive">Hello</ion-option-button>
               </ion-item>
+              <a href="#" class="item" ng-repeat="item in list">
+                {{item.text}}
+              </a>
             </ion-list>
           </ion-content>
         </ion-side-menu-content>
