--- a/test/html/sideMenu.html
+++ b/test/html/sideMenu.html
@@ -13,7 +13,7 @@
 
       <ion-side-menus>
 
-        <ion-side-menu-content edge-drag-threshold="true" drag-content="!$root.disableDrag">
+        <ion-side-menu-content drag-content="!$root.disableDrag">
           <header class="bar bar-header bar-positive">
             <button class="button button-icon ion-navicon" menu-toggle="left" ng-hide="$exposeAside.active"></button>
             <h1 class="title">Slide me</h1>
