Proper slides demo

--- a/test/html/slides.html
+++ b/test/html/slides.html
@@ -15,7 +15,7 @@
     <ion-header-bar class="bar-assertive">
       <ion-title>Hello</ion-title>
     </ion-header-bar>
-    <ion-content class="padding">
+    <ion-content class="padding" scroll="false">
       <ion-slides options="options" slider="data.slider">
         <ion-slide-page>
           <ion-content>
