--- a/core/src/index.html
+++ b/core/src/index.html
@@ -26,11 +26,12 @@
     <ion-app>
       <ion-content>
 
-        <med-button>med button</med-button>
-
         <ion-button>ion button</ion-button>
+        <ion-button disabled>ion button</ion-button>
+        <ion-button class="ion-focused">ion button</ion-button>
+        <ion-button class="ion-activated">ion button</ion-button>
 
       </ion-content>
-    </ion-app> 
+    </ion-app>
   </body>
 </html>
