--- a/core/src/index.html
+++ b/core/src/index.html
@@ -26,10 +26,15 @@
     <ion-app>
       <ion-content>
 
+        <ion-button secondary>ion button</ion-button>
+        <ion-button secondary disabled>ion button</ion-button>
+
         <ion-button>ion button</ion-button>
         <ion-button disabled>ion button</ion-button>
         <ion-button class="ion-focused">ion button</ion-button>
         <ion-button class="ion-activated">ion button</ion-button>
+        <ion-button block>ion button</ion-button>
+        <ion-button full>ion button</ion-button>
 
       </ion-content>
     </ion-app>
