--- a/core/src/index.html
+++ b/core/src/index.html
@@ -22,7 +22,7 @@
       }
 
       .icon {
-        width: 24px;
+        min-width: 24px;
         background-color: red;
         height: 24px;
       }
@@ -37,7 +37,7 @@
       <div class="icon" slot="start"></div>
       <div class="teste" slot="start"></div>
 
-      <span slot="title">Page </span>
+      <span slot="title">Page Page Page Page Page</span>
       <span slot="subtitle">Page Subtitle</span>
 
       <div class="icon" slot="end"></div>
