--- a/core/src/index.html
+++ b/core/src/index.html
@@ -16,27 +16,76 @@
       .custom {
         --med-text-transform: initial;
       }
-
+      
       ion-button {
         margin: 15px;
+      }
+
+      .icon {
+        min-width: 24px;
+        background-color: red;
+        height: 24px;
+      }
+
+      med-navbar {
+        color: #fff;
       }
     </style>
   </head>
   <body>
-    <ion-app>
-      <ion-content>
+    <med-navbar>
+     
+      <div class="teste" slot="start"></div>
 
-        <ion-button secondary>ion button</ion-button>
-        <ion-button secondary disabled>ion button</ion-button>
+      <span slot="title">Page Page Page Page Page</span>
+      <span slot="subtitle">Page Subtitle</span>
 
         <ion-button>ion button</ion-button>
         <ion-button disabled>ion button</ion-button>
         <ion-button class="ion-focused">ion button</ion-button>
         <ion-button class="ion-activated">ion button</ion-button>
-        <ion-button block>ion button</ion-button>
-        <ion-button full>ion button</ion-button>
 
+          <ion-button tertiary>ion button</ion-button>
+          <ion-button tertiary disabled>ion button</ion-button>
+          <ion-button tertiary class="ion-focused">ion button</ion-button>
+          <ion-button tertiary class="ion-activated">ion button</ion-button>
+          <ion-button tertiary block>ion button</ion-button>
+          <ion-button tertiary full>ion button</ion-button>
+        </div>
       </ion-content>
-    </ion-app>
+    </ion-app> -->
+
+    <script>
+      setTimeout(() => {
+        const el = document.createElement('div');
+        el.classList.add('icon', 'tttt');
+
+        document.querySelector('.teste').insertAdjacentElement('afterbegin', el);
+      }, 3000);
+
+     setTimeout(() => {
+        const el = document.createElement('div');
+        el.classList.add('icon');
+
+        document.querySelector('.tttt').insertAdjacentElement('afterend', el);
+      }, 6000);
+
+      setTimeout(() => {
+        const el = document.createElement('div');
+        el.classList.add('icon');
+        const el2 = document.createElement('div');
+        el2.classList.add('icon');
+
+        document.querySelector('.teste2').insertAdjacentElement('afterbegin', el);
+        document.querySelector('.teste2').insertAdjacentElement('afterbegin', el2);
+      }, 4000);
+
+     setTimeout(() => {
+        const el = document.createElement('div');
+        el.textContent = "teste muito maluco";
+
+        document.querySelector('.tttt').insertAdjacentElement('afterend', el);
+      }, 9000);
+    </script>
   </body>
 </html>
