--- a/core/src/index.html
+++ b/core/src/index.html
@@ -24,18 +24,20 @@
   </head>
   <body>
     <ion-app>
-      <ion-content>
+      <med-navbar>
+        <span slot="title">title</span>
+        <span slot="subtitle">subtitle</span>
+      </med-navbar>
 
+      <ion-content>
         <ion-button secondary>ion button</ion-button>
         <ion-button secondary disabled>ion button</ion-button>
-
         <ion-button>ion button</ion-button>
         <ion-button disabled>ion button</ion-button>
         <ion-button class="ion-focused">ion button</ion-button>
         <ion-button class="ion-activated">ion button</ion-button>
         <ion-button block>ion button</ion-button>
         <ion-button full>ion button</ion-button>
-
       </ion-content>
     </ion-app>
   </body>
