--- a/core/.storybook/preview-body.html
+++ b/core/.storybook/preview-body.html
@@ -15,4 +15,12 @@
     overflow: auto;
     background-color: var(--global-background);
   }
+
+  body.dark ion-content {
+    --background: #1a1a1a;
+  }
+
+  body.light ion-content {
+    --background: #fff;
+  }
 </style>
