--- a/core/src/index.html
+++ b/core/src/index.html
@@ -41,10 +41,14 @@
   </head>
   <body>
     <ion-app>
-      <med-navbar>
+      <!-- <med-navbar>
         <div class="ribbon"slot="top"></div>
 
-        <div class="icon" slot="left"></div>
+        <ion-button icon-only slot="left">
+          <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 8L11 16L19 24" stroke="white" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </ion-button>
 
         <span slot="title">teste muito com texto longo</span>
         <span slot="subtitle">teste muito com texto longo</span>
@@ -52,7 +56,7 @@
         <div class="icon" slot="right"></div>
         <div class="icon" slot="right"></div>
 
-      </med-navbar>
+      </med-navbar> -->
 
       <ion-content>
         <div class="teste">
@@ -61,7 +65,7 @@
           <ion-button class="ion-focused">ion button</ion-button>
           <ion-button class="ion-activated">ion button</ion-button>
           <ion-button block>ion button</ion-button>
-          <ion-button full>ion button</ion-button>
+          <!-- <ion-button full>ion button</ion-button>
 
           <ion-button secondary>ion button</ion-button>
           <ion-button secondary disabled>ion button</ion-button>
@@ -75,7 +79,7 @@
           <ion-button tertiary class="ion-focused">ion button</ion-button>
           <ion-button tertiary class="ion-activated">ion button</ion-button>
           <ion-button tertiary block>ion button</ion-button>
-          <ion-button tertiary full>ion button</ion-button>
+          <ion-button tertiary full>ion button</ion-button> -->
         </div>
       </ion-content>
     </ion-app>
