--- a/core/src/index.html
+++ b/core/src/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <ion-app>
-      <!-- <med-navbar>
+      <med-navbar>
         <div class="ribbon"slot="top"></div>
 
         <ion-button icon-only slot="left">
@@ -56,7 +56,7 @@
         <div class="icon" slot="right"></div>
         <div class="icon" slot="right"></div>
 
-      </med-navbar> -->
+      </med-navbar>
 
       <ion-content>
         <div class="teste">
@@ -65,7 +65,7 @@
           <ion-button class="ion-focused">ion button</ion-button>
           <ion-button class="ion-activated">ion button</ion-button>
           <ion-button block>ion button</ion-button>
-          <!-- <ion-button full>ion button</ion-button>
+          <ion-button full>ion button</ion-button>
 
           <ion-button secondary>ion button</ion-button>
           <ion-button secondary disabled>ion button</ion-button>
@@ -79,7 +79,7 @@
           <ion-button tertiary class="ion-focused">ion button</ion-button>
           <ion-button tertiary class="ion-activated">ion button</ion-button>
           <ion-button tertiary block>ion button</ion-button>
-          <ion-button tertiary full>ion button</ion-button> -->
+          <ion-button tertiary full>ion button</ion-button>
         </div>
       </ion-content>
     </ion-app>
