--- a/core/src/index.html
+++ b/core/src/index.html
@@ -60,7 +60,7 @@
 
       <ion-content>
         <div class="teste">
-          <ion-button disabled="false">ion button</ion-button>
+          <ion-button>ion button</ion-button>
           <ion-button disabled>ion button</ion-button>
           <ion-button class="ion-focused">ion button</ion-button>
           <ion-button class="ion-activated">ion button</ion-button>
