--- a/core/.storybook/preview-body.html
+++ b/core/.storybook/preview-body.html
@@ -4,12 +4,13 @@
   }
 
   body.dark {
-    --global-background: #1a1a1a;
+    --global-background: #141414;
   }
 
   body.light {
-    --global-background: #fff;
+    --global-background: #fafafa;
   }
+  
 
   body {
     overflow: auto;
@@ -17,10 +18,10 @@
   }
 
   body.dark ion-content {
-    --background: #1a1a1a;
+    --background: #141414;
   }
 
   body.light ion-content {
-    --background: #fff;
+    --background: #fafafa;
   }
 </style>
