--- a/core/src/index.html
+++ b/core/src/index.html
@@ -59,6 +59,16 @@
       </med-navbar>
 
       <ion-content>
+        <ion-button icon-only>
+          <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 8L11 16L19 24" stroke="white" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </ion-button>
+        <ion-button icon-only>
+          <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 8L11 16L19 24" stroke="white" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </ion-button>
         <ion-button class="button">ion button</ion-button>
         <ion-button disabled>ion button</ion-button>
         <ion-button class="ion-focused">ion button</ion-button>
