--- a/core/src/themes/test/css-variables/index.html
+++ b/core/src/themes/test/css-variables/index.html
@@ -205,7 +205,7 @@
                     <ion-label position="floating">Standard</ion-label>
                     <ion-icon slot="end" name="trash"></ion-icon>
                     <ion-input></ion-input>
-                    <ion-note slot="helper">Helper Text</ion-note>
+                    <ion-note slot="error">Helper Text</ion-note>
                   </ion-item>
                 </ion-card-content>
               </ion-card>
