feat: adicionado toggle no med-agrupador

--- a/core/src/index.html
+++ b/core/src/index.html
@@ -68,12 +68,8 @@
       </med-header>
 
       <ion-content fullscreen class="ion-padding">
-        <ion-icon name="med-configuracoes">teste</ion-icon>
-        <ion-icon name="med-arrow-up">teste</ion-icon>
-        <ion-icon name="med-arrow-down">teste</ion-icon>
-        <ion-button id="toastID"  expand="block" fill="clear" shape="round">
-          toast default
-        </ion-button>
+        <med-agrupador>
+        </med-agrupador>
       </ion-content>
 
       <!-- component -->
